<resources>
    <string name="app_name">Journey</string>

    <!-- Strings used as placeholders for RecyclerView  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_placeholder">Title</string>
    <string name="subtitle_placeholder">Subtitle</string>
    <string name="story_description_placeholder">Trip with the boys to see the Track-mania Cup 🏎️</string>
    <string name="story_detail_text">Enter your text.</string>

    <!-- String used to populate some story cards -->
    <string name="china_title">The Journey of a Thousand Miles</string>
    <string name="egypt_title">Mysteries of the Pharaohs</string>
    <string name="italy_title">Romance in the Ruins</string>
    <string name="japan_title">Land of the Rising Sun</string>
    <string name="mexico_title">Colors of the Fiesta</string>
    <string name="peru_title">Inca Trails and Tales</string>

    <string name="china_subtitle">Begins with a single step</string>
    <string name="egypt_subtitle">Where ancient meets modern</string>
    <string name="italy_subtitle">A journey through history and cuisine</string>
    <string name="japan_subtitle">Tradition entwined with innovation</string>
    <string name="mexico_subtitle">Vibrant culture, warm hearts</string>
    <string name="peru_subtitle">Mystic landscapes and hidden wonders</string>
    <string name="MIT">Copyright (c) 2023 DINUM

\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
LICENCE OUVERTE 2.0/OPEN LICENCE 2.0
\nRéutilisation de l’« Information » sous cette licence

\nLe « Concédant » concède au « Réutilisateur » un droit non exclusif et gratuit de libre « Réutilisation » de l’« Information » objet de la présente licence, à des fins commerciales ou non, dans le monde entier et pour une durée illimitée, dans les conditions exprimées ci-dessous.

\nLe « Réutilisateur » est libre de réutiliser l’« Information » :

    \nde la communiquer, la reproduire, la copier ;
    \nde l’adapter, la modifier, l’extraire et la transformer, notamment pour créer des « Informations dérivées » ;
    \nde la diffuser, la redistribuer, la publier et la transmettre, de l’exploiter à titre commercial, par exemple en la combinant avec d’autres informations, ou en l’incluant dans votre propre produit ou application.

\nSous réserve de :

    \nmentionner la paternité de l’«Information» : sa source (a minima le nom du « Concédant ») et la date de la dernière mise à jour de l’« Information » réutilisée.

\nLe « Réutilisateur » peut notamment s’ acquitter de cette condition en indiquant l’adresse (URL) renvoyant vers « l’Information » et assurant une mention effective de sa paternité.

\nPar exemple :

\nDans le cas d’une réutilisation de la base SIRENE de l’INSEE, mentionner l’URL du « Concédant » : www.insee.fr + la date de dernière mise à jour de l’Information réutilisée.

\nCette mention de paternité ne doit ni conférer un caractère officiel à la « Réutilisation » de l’« Information », ni suggérer une quelconque reconnaissance ou caution par le « Concédant », ou par toute autre entité publique, du « Réutilisateur » ou de sa « Réutilisation ».
\nDonnées à caractère personnel

\nL’« Information » mise à disposition peut contenir des « Données à caractère personnel » pouvant faire l’objet d’une « Réutilisation ». Alors, le « Concédant » informe le « Réutilisateur » (par tous moyens) de leur présence, l’ « Information » peut être librement réutilisée, sans faire obstacle aux libertés accordées par la présente licence, à condition de respecter le cadre légal relatif à la protection des données à caractère personnel.
\nDroits de propriété intellectuelle

\nIl est garanti au « Réutilisateur » que l’ « Information » ne contient pas de « Droits de propriété intellectuelle » appartenant à des tiers qui pourraient faire obstacle aux libertés qui lui sont accordées par la présente licence.

\nLes éventuels « Droits de propriété intellectuelle » détenus par le « Concédant » sur l’ « Information » ne font pas obstacle aux libertés qui sont accordées par la présente licence. Lorsque le « Concédant » détient des « Droits de propriété intellectuelle » » sur l’ « Information », il les cède au « Réutilisateur » de façon non exclusive, à titre gracieux, pour le monde entier, pour toute la durée des « Droits de propriété intellectuelle », et le « Réutilisateur » peut en faire tout usage conformément aux libertés et aux conditions définies par la présente licence.
\nResponsabilité

\nL’ «Information» est mise à disposition telle que produite ou reçue, sans autre garantie expresse ou tacite qui n’est pas prévue par la présente licence. L’absence de défauts ou d’erreurs éventuellement contenues dans l’ «Information», comme la fourniture continue de l’ « Information » n’est pas garantie par le «Concédant». Il ne peut être tenu pour responsable de toute perte, préjudice ou dommage de quelque sorte causé à des tiers du fait de la « Réutilisation ».

\nLe « Réutilisateur » est seul responsable de la « Réutilisation » de l’« Information ».

\nLa « Réutilisation » ne doit pas induire en erreur des tiers quant au contenu de l’« Information », sa source et sa date de mise à jour.
\nDroit applicable

\nLa présente licence est régie par le droit français.
\nCompatibilité de la présente licence

\nElle a été conçue pour être compatible avec toute licence libre qui exige a minima la mention de paternité. Elle est notamment compatible avec la version antérieure de la présente licence ainsi qu’avec les licences « Open Government Licence » (OGL) du Royaume-Uni, « Creative Commons Attribution » (CC-BY) de Creative Commons et « Open Data Commons Attribution » (ODC-BY) de l’Open Knowledge Foundation.
\nDéfinitions

\nSont considérés, au sens de la présente licence comme :

    \nLe « Concédant » : toute personne concédant un droit de « Réutilisation » sur l’« Information » dans les libertés et les conditions prévues par la présente licence.
    \nL’« Information » :
        \ntoute information publique figurant dans des documents communiqués ou publiés par une administration mentionnée au premier alinéa de l’article L.300-2 du CRPA ;
        \ntoute information mise à disposition par toute personne selon les termes et conditions de la présente licence.
    \nLa « Réutilisation » : l’utilisation de l’« Information » à d’autres fins que celles pour lesquelles elle a été produite ou reçue.
    \nLe « Réutilisateur » : toute personne qui réutilise les « Informations » conformément aux conditions de la présente licence.
    \nDes « Données à caractère personnel » : toute information se rapportant à une personne physique identifiée ou identifiable, pouvant être identifiée directement ou indirectement. Leur « Réutilisation » est subordonnée au respect du cadre juridique en vigueur.
    \nUne « Information dérivée » : toute nouvelle donnée ou information créées directement à partir de l’« Information » ou à partir d’une combinaison de l’ « Information » et d’autres données ou informations non soumises à cette licence.
    \nLes « Droits de propriété intellectuelle » : tous droits identifiés comme tels par le Code de la propriété intellectuelle (droit d’auteur, droits voisins au droit d’auteur, droit sui generis des producteurs de bases de données).

\nÀ propos de cette licence

\nLa présente licence a vocation à être utilisée par les administrations pour la réutilisation de leurs informations publiques. Elle peut également être utilisée par toute personne souhaitant mettre à disposition de l’« Information » dans les conditions définies par la présente licence

\nLa France est dotée d’un cadre juridique global visant à une diffusion spontanée par les administrations de leurs informations publiques afin d’en permettre la plus large réutilisation.

\nLe droit de la « Réutilisation » de l’« Information » des administrations est régi par le code des relations entre le public et l’administration (CRPA) et, le cas échéant, le code du patrimoine (livre II relatif aux archives).

\nCette licence facilite la réutilisation libre et gratuite des informations publiques et figure parmi les licences qui peuvent être utilisées par l’administration en vertu du décret pris en application de l’article L.323-2 du CRPA.

\nEtalab est la mission chargée, sous l’autorité du Premier ministre, d’ouvrir le plus grand nombre de données publiques des administrations de l’État et de ses établissements publics. Elle a réalisé la Licence Ouverte pour faciliter la réutilisation libre et gratuite de ces informations publiques, telles que définies par l’article L321-1 du CRPA.

\nCette licence est une version 2.0 de la Licence Ouverte.

\nEtalab se réserve la faculté de proposer de nouvelles versions de la Licence Ouverte. Cependant, les « Réutilisateurs » pourront continuer à réutiliser les informations disponibles sous cette licence s’ils le souhaitent.</string>
    =======
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_story">Add story button</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="select_image">Select Image</string>
    <string name="save">Save</string>
    <string name="preview_image_of_the_story">Preview image of the story</string>
    <string name="edit_menu">Edit</string>
    <string name="modify_password">Modify password</string>
    <string name="new_password">New password</string>
    <string name="modify_username">Modify username</string>
    <string name="new_username">New username</string>
    <string name="legal_notice">Legal Notice</string>
    <string name="profile">Profile</string>
    <string name="notebook">Notebook</string>
    <string name="country_ideas">Country Ideas</string>
    <string name="login_successful">Successful connection!\n</string>
    <string name="connect">Connect</string>
    <string name="prompt_username">Username</string>
    <string name="login">Login</string>
    <string name="profile_message">This is a just an example of a profile page... Obviously we don\'t want to show the password in clear ;)</string>
</resources>
