<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_inverseOnSurface"
    android:backgroundTint="@color/constraintLayout_onPrimaryContainer"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.users.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/frameLayout_background"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile"
                android:textSize="40sp"
                app:drawableTopCompat="@drawable/baseline_person_bigger" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/prompt_username"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="username"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:hint="@string/prompt_username" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/prompt_password"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="password"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:hint="@string/prompt_password" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/profile_message"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <Button
        android:id="@+id/btnML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:alpha="0.50"
        android:text="@string/legal_notice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>