<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    tools:context="com.example.journey.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/storyImageDetail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/storyTitleDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/img_japan" />

        <TextView
            android:id="@+id/titleDetail"
            style="@style/StoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_semi_transparent_background"
            android:padding="6dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintBottom_toBottomOf="@+id/storyImageDetail"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/storyTitleDetail"
            style="@style/StoryDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/subtitle_placeholder"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyImageDetail" />

        <TextView
            android:id="@+id/storyDetail"
            style="@style/StoryBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/story_detail_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyTitleDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
