<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:strokeColor="@android:color/background_light"
    app:strokeWidth="1dp">

    <!-- TODO: Finish this view and create the recycler view -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/travelImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="TODO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/title"
            style="@style/StoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/title_placeholder"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/travelImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/StorySubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:padding="8dp"
            android:text="@string/subtitle_placeholder"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/travelImage"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@string/subtitle_placeholder" />

        <TextView
            android:id="@+id/description"
            style="@style/StoryBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/story_description_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/travelImage"
            app:layout_constraintTop_toBottomOf="@+id/subTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>